--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: matchalot
 
   r2dbc:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: r2dbc:postgresql://localhost:5432/postgres
     username: postgres
     password: admin
     properties:
