fix: 비즈니스로직중 -5만 아닌 음수의 신뢰도 사람도 가능하도록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,6 +39,7 @@ app:
 
 logging:
   level:
+    org.springframework.security.oauth2: DEBUG
     org.springframework.web: DEBUG
     org.springframework.security: DEBUG
     org.springframework.r2dbc: DEBUG
