--- a/build.gradle
+++ b/build.gradle
@@ -29,12 +29,13 @@ ext {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     //implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    //implementation 'io.r2dbc:r2dbc-postgresql:1.0.2.RELEASE'
+
     implementation 'org.postgresql:postgresql:42.7.3'
     implementation 'io.grpc:grpc-netty-shaded'
     implementation 'io.grpc:grpc-protobuf'
@@ -43,6 +44,8 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'org.postgresql:r2dbc-postgresql:1.0.2.RELEASE'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.mockito:mockito-core'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     //testImplementation 'org.springframework.grpc:spring-grpc-test'
