--- a/build.gradle
+++ b/build.gradle
@@ -92,3 +92,7 @@ protobuf {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['-parameters']
+}
