feat:매칭전까지정답비공개 족보 변경

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
+compileJava {
+    options.compilerArgs += ["-parameters"]
+}
 
 repositories {
     mavenCentral()
