--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -5,13 +5,15 @@ on:
     branches: [ main ]
     paths:
       - 'src/**'
-      - 'pom.xml'
+      - 'build.gradle'
+      - 'settings.gradle'
       - '.github/workflows/backend-deploy.yml'
   pull_request:
     branches: [ main ]
     paths:
       - 'src/**'
-      - 'pom.xml'
+      - 'build.gradle'
+      - 'settings.gradle'
 
 jobs:
   test:
@@ -22,21 +24,27 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up JDK 21
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '17'
         distribution: 'temurin'
         
-    - name: Cache Maven dependencies
+    - name: Cache Gradle dependencies
       uses: actions/cache@v4
       with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+        
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
         
     - name: Run tests
-      run: mvn clean test -Dspring.profiles.active=test
+      run: ./gradlew test -Dspring.profiles.active=test
       
   build-and-deploy:
     needs: test
@@ -54,15 +62,21 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         
-    - name: Cache Maven dependencies
+    - name: Cache Gradle dependencies
       uses: actions/cache@v4
       with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+          
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
         
     - name: Build application
-      run: mvn clean package -DskipTests -Dspring.profiles.active=prod
+      run: ./gradlew clean build -x test -Dspring.profiles.active=prod
       
     - name: Build Docker image
       run: |
@@ -77,21 +91,16 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_PORT }}
         script: |
-          # 기존 컨테이너 중지 및 제거
           sudo docker stop matchalot-backend || true
           sudo docker rm matchalot-backend || true
           
-          # 기존 이미지 제거 (선택적)
           sudo docker rmi matchalot-backend:latest || true
           
-          # 새 코드 pull
           cd /home/ubuntu/matchalot
           git pull origin main
           
-          # Docker 이미지 빌드
           sudo docker build -t matchalot-backend:latest .
           
-          # 컨테이너 실행
           sudo docker run -d \
             --name matchalot-backend \
             --restart unless-stopped \
@@ -119,7 +128,7 @@ jobs:
       if: success()
       run: |
         echo "Deployment successful!"
-        echo "Backend is now running on server"
+        echo "Backend is now running on production server"
         
     - name: Notify deployment failure  
       if: failure()
