--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -10,8 +10,6 @@ on:
                   - 'build.gradle'
                   - 'Dockerfile'
                   - 'settings.gradle'  
-                  - 'gradlew'
-                  - '.gradlew' # (hidden file in case of mvnw)
       
 jobs:
   deploy:
@@ -31,20 +29,20 @@ jobs:
         timeout: 300s
         script: |
           echo "코드 업데이트 중..."
-          cd /home/youkm0806/matchalot
-          git fetch origin main # 원격 변경사항 가져오기
-          git reset --hard origin/main # 로컬 변경사항 버리고 main 브랜치와 동일하게 맞추기
-          git clean -fd # 추적되지 않는 파일/디렉토리 제거 (선택 사항이지만 깔끔한 빌드에 좋음)
+          cd /home/youkm0806/matchalot/backend
+          git fetch origin main
+          git reset --hard origin/main
+          git clean -fd 
           
           echo "Backend 애플리케이션 빌드 중..."
           ./gradlew bootJar # 또는 프로젝트 설정에 따라 ./gradlew build
 
-          echo "Docker Compose 배포 중..."
-          cd devops
-          docker-compose down
-          docker-compose up --build -d # --build 옵션이 재빌드를 트리거
+          echo "Docker Compose 배포하되 백엔드만 잠깐 꺼짐!"
+          cd ../devops
+          docker-compose down backend
+          docker-compose up --build -d backend
 
           echo "헬스체크 중..."
           sleep 30
-          curl -f http://localhost:8080/actuator/health
-          echo "배포 성공!"
+          docker-compose logs backend tail -10
+          curl -f http://localhost:8080/actuator/health && echo "배포 성공" || echo "배포 실패"
